compiler/test/fail_compilation/diag13609a.d
/*
TEST_OUTPUT:
---
fail_compilation/diag13609a.d(12): Error: `}` expected following members in `class` declaration
fail_compilation/diag13609a.d(9):        declared here
---
*/

class C
{
    void foo() {}
